# grid-mg-bench

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindGrid.cmake
include/: AggregationKernelsRework.h  AggregationRework.h  BasisVectors.h  Benchmark_helpers.h  CoarsenedMatrixBaseline.h  CoarsenedMatrixKernelsRework.h  CoarsenedMatrixRework.h  CoarsenedMatrixUpstream.h  CoarsenedMatrixUpstreamImproved.h  CoarsenedMatrixUpstreamImprovedDirsave.h  CoarsenedMatrixUpstreamImprovedDirsaveForGPT.h  CoarsenedMatrixUpstreamImprovedDirsaveLut.h  CoarsenedMatrixUpstreamImprovedDirsaveLutMRHS.h  CoarseningLookupTableRework.h  CoarseningPolicyRework.h  GeometryRework.h  Helpers.h  Layout_converters.h  LevelInfo.h  Multigrid.h  MultigridParams.h  MultigridPreconditioner.h  NullVectorSetupRework.h  Profiler.h  VCycleRework.h  Views.h
src/: Benchmark_aggregation.cc  Benchmark_blockMaskedInnerProduct.cc  Benchmark_blocking_operators.cc  Benchmark_clover_sweep.cc  Benchmark_clover_term.cc  Benchmark_coarse_operator.cc  Benchmark_coarsenedmatrix.cc  Benchmark_create_coarse_coarse_operator.cc  Benchmark_create_coarse_operator.cc  Benchmark_create_coarse_operator_dwf.cc  Benchmark_create_coarse_operator_gpt.cc  Benchmark_mrhs_clover.cc  Benchmark_mrhs_coarsening.cc  Benchmark_wilson_clover_mrhs.cc  CMakeLists.txt  Test_coarse_red_black.cc  Test_coarsening_lookuptable.cc  Test_g5r5.cc  Test_geom.cc  Test_new_data_type.cc  Test_new_lattice_transfer.cc  Test_rb_vcycle.cc  Test_wilson_cg_unprec.cc  Test_wilson_mg.cc  Test_wilson_mg_mp.cc  Test_wilsonclover_mg.cc  Test_wilsonclover_mg_lime.cc  Test_wilsonclover_mg_mp.cc
