cmake_minimum_required(VERSION 3.13.4 FATAL_ERROR)

project(grid-mg-bench LANGUAGES CXX)

if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
    message(FATAL_ERROR "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there.")
endif()

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

set(GRID_DIR "" CACHE PATH "path to a directory holding a grid-config binary")
find_package(Grid REQUIRED)
if(Grid_FOUND)
    set(CMAKE_CXX_COMPILER ${Grid_CXX})
    # # version for an installed Grid
    # set(CMAKE_CXX_COMPILER ${Grid_CXX})
    # set(CMAKE_CXX_FLAGS        "-I${Grid_PREFIX}/include ${Grid_CXXFLAGS} ${CMAKE_CXX_FLAGS}")
    # set(CMAKE_EXE_LINKER_FLAGS "-L${Grid_PREFIX}/lib ${Grid_LDFLAGS}  ${CMAKE_EXE_LINKER_FLAGS}")

    # version to use for the current uninstalled grid on my laptop  TODO find a way to get project base dir (= git root) from build dir
    set(CMAKE_CXX_COMPILER ${Grid_CXX})
    set(CMAKE_CXX_FLAGS        "-I${Grid_PREFIX}/Grid -I/home/daniel/code/git/rebasing-grid ${Grid_CXXFLAGS} ${CMAKE_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "-L${Grid_PREFIX}/Grid ${Grid_LDFLAGS}  ${CMAKE_EXE_LINKER_FLAGS}")
endif()

include_directories(include)

add_executable(Benchmark_aggregation src/Benchmark_aggregation.cc)
add_executable(Benchmark_coarsenedmatrix src/Benchmark_coarsenedmatrix.cc)
add_executable(Test_coarsening_lookuptable src/Test_coarsening_lookuptable.cc)
add_executable(Test_coarse_red_black src/Test_coarse_red_black.cc)
add_executable(Test_g5r5 src/Test_g5r5.cc)
add_executable(Test_new_data_type src/Test_new_data_type.cc)
add_executable(Test_new_lattice_transfer src/Test_new_lattice_transfer.cc)
add_executable(Test_wilson_cg_unprec src/Test_wilson_cg_unprec.cc)
add_executable(Test_wilsonclover_mg src/Test_wilsonclover_mg.cc)
add_executable(Test_wilsonclover_mg_lime src/Test_wilsonclover_mg_lime.cc)
add_executable(Test_wilsonclover_mg_mp src/Test_wilsonclover_mg_mp.cc)
add_executable(Test_wilson_mg src/Test_wilson_mg.cc)
add_executable(Test_wilson_mg_mp src/Test_wilson_mg_mp.cc)

target_link_libraries(Benchmark_aggregation PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Benchmark_coarsenedmatrix PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_coarsening_lookuptable PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_coarse_red_black PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_g5r5 PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_new_data_type PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_new_lattice_transfer PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_wilson_cg_unprec PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_wilsonclover_mg PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_wilsonclover_mg_lime PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_wilsonclover_mg_mp PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_wilson_mg PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_wilson_mg_mp PRIVATE ${Grid_LIBS} Grid)

install(TARGETS Benchmark_aggregation DESTINATION bin)
install(TARGETS Benchmark_coarsenedmatrix DESTINATION bin)
install(TARGETS Test_coarsening_lookuptable DESTINATION bin)
install(TARGETS Test_coarse_red_black DESTINATION bin)
install(TARGETS Test_g5r5 DESTINATION bin)
install(TARGETS Test_new_data_type DESTINATION bin)
install(TARGETS Test_new_lattice_transfer DESTINATION bin)
install(TARGETS Test_wilson_cg_unprec DESTINATION bin)
install(TARGETS Test_wilsonclover_mg DESTINATION bin)
install(TARGETS Test_wilsonclover_mg_lime DESTINATION bin)
install(TARGETS Test_wilsonclover_mg_mp DESTINATION bin)
install(TARGETS Test_wilson_mg DESTINATION bin)
install(TARGETS Test_wilson_mg_mp DESTINATION bin)
