add_executable(Benchmark_aggregation Benchmark_aggregation.cc)
add_executable(Benchmark_blockMaskedInnerProduct Benchmark_blockMaskedInnerProduct.cc)
add_executable(Benchmark_clover_sweep Benchmark_clover_sweep.cc)
add_executable(Benchmark_clover_term Benchmark_clover_term.cc)
add_executable(Benchmark_coarse_operator Benchmark_coarse_operator.cc)
add_executable(Benchmark_create_coarse_operator Benchmark_create_coarse_operator.cc)
add_executable(Benchmark_create_coarse_operator_dwf Benchmark_create_coarse_operator_dwf.cc)
add_executable(Benchmark_mrhs_coarsening Benchmark_mrhs_coarsening.cc)
add_executable(Benchmark_wilson_clover_mrhs Benchmark_wilson_clover_mrhs.cc)
add_executable(Test_coarsening_lookuptable Test_coarsening_lookuptable.cc)
add_executable(Test_coarse_red_black Test_coarse_red_black.cc)
add_executable(Test_g5r5 Test_g5r5.cc)
add_executable(Test_geom Test_geom.cc)
add_executable(Test_new_data_type Test_new_data_type.cc)
add_executable(Test_new_lattice_transfer Test_new_lattice_transfer.cc)
add_executable(Test_wilson_cg_unprec Test_wilson_cg_unprec.cc)
add_executable(Test_wilsonclover_mg Test_wilsonclover_mg.cc)
add_executable(Test_wilsonclover_mg_lime Test_wilsonclover_mg_lime.cc)
add_executable(Test_wilsonclover_mg_mp Test_wilsonclover_mg_mp.cc)
add_executable(Test_wilson_mg Test_wilson_mg.cc)
add_executable(Test_wilson_mg_mp Test_wilson_mg_mp.cc)

target_link_libraries(Benchmark_aggregation PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Benchmark_blockMaskedInnerProduct PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Benchmark_clover_sweep PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Benchmark_clover_term PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Benchmark_coarse_operator PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Benchmark_create_coarse_operator PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Benchmark_create_coarse_operator_dwf PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Benchmark_mrhs_coarsening PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Benchmark_wilson_clover_mrhs PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_coarsening_lookuptable PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_coarse_red_black PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_g5r5 PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_geom PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_new_data_type PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_new_lattice_transfer PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_wilson_cg_unprec PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_wilsonclover_mg PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_wilsonclover_mg_lime PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_wilsonclover_mg_mp PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_wilson_mg PRIVATE ${Grid_LIBS} Grid)
target_link_libraries(Test_wilson_mg_mp PRIVATE ${Grid_LIBS} Grid)

install(TARGETS Benchmark_aggregation DESTINATION bin)
install(TARGETS Benchmark_blockMaskedInnerProduct DESTINATION bin)
install(TARGETS Benchmark_clover_sweep DESTINATION bin)
install(TARGETS Benchmark_clover_term DESTINATION bin)
install(TARGETS Benchmark_coarse_operator DESTINATION bin)
install(TARGETS Benchmark_create_coarse_operator DESTINATION bin)
install(TARGETS Benchmark_create_coarse_operator_dwf DESTINATION bin)
install(TARGETS Benchmark_mrhs_coarsening DESTINATION bin)
install(TARGETS Benchmark_wilson_clover_mrhs DESTINATION bin)
install(TARGETS Test_coarsening_lookuptable DESTINATION bin)
install(TARGETS Test_coarse_red_black DESTINATION bin)
install(TARGETS Test_g5r5 DESTINATION bin)
install(TARGETS Test_geom DESTINATION bin)
install(TARGETS Test_new_data_type DESTINATION bin)
install(TARGETS Test_new_lattice_transfer DESTINATION bin)
install(TARGETS Test_wilson_cg_unprec DESTINATION bin)
install(TARGETS Test_wilsonclover_mg DESTINATION bin)
install(TARGETS Test_wilsonclover_mg_lime DESTINATION bin)
install(TARGETS Test_wilsonclover_mg_mp DESTINATION bin)
install(TARGETS Test_wilson_mg DESTINATION bin)
install(TARGETS Test_wilson_mg_mp DESTINATION bin)
